# reflmempp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
clang-p2996/: CMakeLists.txt  struct_splitter.cpp  struct_splitter.h  wrapper.cpp  wrapper.h
edg/: CMakeLists.txt  README.md  aos2soa.cpp  aos2soa_containers.cpp  aos2soa_contiguous.cpp  aosoa2soaos_contiguous.cpp  with_methods.cpp
edg/include/: detail.h  mdspan.h  rmpp.h
motivation/: CMakeLists.txt  aos.h  aos2soa.cpp  aosoa.h  false_sharing.cpp  gpu_manual.cu  overhead.cpp  run_benchmark.sh  run_llvm_mca_focus.sh  run_objdump.sh  soa.h  soa2aos.cpp
motivation/asm/3888707/: aos2soa-computebound-2-double-aos-novec-focus.mca  aos2soa-computebound-2-double-aos-novec-focus.s  aos2soa-computebound-2-double-aos-novec.s  aos2soa-computebound-2-double-aos-vec-focus.mca  aos2soa-computebound-2-double-aos-vec-focus.s  aos2soa-computebound-2-double-aos-vec.s  aos2soa-computebound-2-double-soa-novec-focus.mca  aos2soa-computebound-2-double-soa-novec-focus.s  aos2soa-computebound-2-double-soa-novec.s  aos2soa-computebound-2-double-soa-vec-focus.mca  aos2soa-computebound-2-double-soa-vec-focus.s  aos2soa-computebound-2-double-soa-vec.s  aos2soa-computebound-20-double-aos-novec-focus.mca  aos2soa-computebound-20-double-aos-novec-focus.s  aos2soa-computebound-20-double-aos-novec.s  aos2soa-computebound-20-double-aos-vec-focus.mca  aos2soa-computebound-20-double-aos-vec-focus.s  aos2soa-computebound-20-double-aos-vec.s  aos2soa-computebound-20-double-soa-novec-focus.mca  aos2soa-computebound-20-double-soa-novec-focus.s  aos2soa-computebound-20-double-soa-novec.s  aos2soa-computebound-20-double-soa-vec-focus.mca  aos2soa-computebound-20-double-soa-vec-focus.s  aos2soa-computebound-20-double-soa-vec.s  aos2soa-memorybound-2-double-aos-novec-focus.mca  aos2soa-memorybound-2-double-aos-novec-focus.s  aos2soa-memorybound-2-double-aos-novec.s  aos2soa-memorybound-2-double-aos-vec-focus.mca  aos2soa-memorybound-2-double-aos-vec-focus.s  aos2soa-memorybound-2-double-aos-vec.s  aos2soa-memorybound-2-double-soa-novec-focus.mca  aos2soa-memorybound-2-double-soa-novec-focus.s  aos2soa-memorybound-2-double-soa-novec.s  aos2soa-memorybound-2-double-soa-vec-focus.mca  aos2soa-memorybound-2-double-soa-vec-focus.s  aos2soa-memorybound-2-double-soa-vec.s  aos2soa-memorybound-20-double-aos-novec-focus.mca  aos2soa-memorybound-20-double-aos-novec-focus.s  aos2soa-memorybound-20-double-aos-novec.s  aos2soa-memorybound-20-double-aos-vec-focus.mca  (+8 more)
motivation/asm/random/: aos2soa-computebound-2-double-aos-vec-focus.mca  aos2soa-computebound-2-double-aos-vec-focus.s  aos2soa-computebound-2-double-aos-vec.s  aos2soa-computebound-2-double-soa-vec-focus.mca  aos2soa-computebound-2-double-soa-vec-focus.s  aos2soa-computebound-2-double-soa-vec.s  aos2soa-computebound-20-double-aos-vec-focus.mca  aos2soa-computebound-20-double-aos-vec-focus.s  aos2soa-computebound-20-double-aos-vec.s  aos2soa-computebound-20-double-soa-vec-focus.mca  aos2soa-computebound-20-double-soa-vec-focus.s  aos2soa-computebound-20-double-soa-vec.s  aos2soa-memorybound-2-double-aos-vec.s  aos2soa-memorybound-2-double-soa-vec-focus.mca  aos2soa-memorybound-2-double-soa-vec-focus.s  aos2soa-memorybound-20-double-aos-vec-focus.mca  aos2soa-memorybound-20-double-aos-vec-focus.s  aos2soa-memorybound-20-double-aos-vec.s  aos2soa-memorybound-20-double-soa-vec-focus.mca  aos2soa-memorybound-20-double-soa-vec-focus.s  aos2soa-memorybound-20-double-soa-vec.s
motivation/results/: plot_results.ipynb
motivation/results/aos2soa/: results_clang_3888707_novec  results_clang_3888707_vec  (+40 more)
(+42 files in other folders)
